# wavetable_synth

./: Cargo.toml  README.md  VST_BUILD_GUIDE.md  build_vst.sh
.github/: copilot-instructions.md
src/: distortion.rs  envelope.rs  filter.rs  gui_pro.rs  lib.rs  main.rs  mod.rs  oscillator.rs  oscillator_backup.rs  plugin.rs  reverb.rs  synth.rs  tests.rs  voice.rs  wavetable_oscillator.rs
